# RAGAS-NLP-SQLqueries-postgres.

./: .gitignore  README.md  chainlit.md  main.py  pyproject.toml
data/examples/: examples.jsonl
scripts/: embed_schema_and_examples.py  validate_examples.py
src/db/: config.py  executor.py  schema_extractor.py
src/eval/: evaluator.py
src/models/: llm.py
src/rag/: retriever.py
src/ui/: app.py
